--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: BanSystemNK-UI
 version: 2.0.0-SNAPSHOT
+api: 1.0.0
 author: Mundschutziii
 main: net.llamadevelopment.bansystemui.BanSystemUI
 description: FormUI-Addon for BanSystemNK
